Tweak CSS so the fix-duplicates-top-buttons div doesn't overflow on top of the next section

--- a/includes/fix-duplicates.css
+++ b/includes/fix-duplicates.css
@@ -149,6 +149,7 @@
 .fix-duplicates-top-buttons {
 	border-top: 1px solid #DFDFDF;
 	padding:.6em .6em 0;
+	height: auto;
 }
 .fix-duplicates-top-buttons fieldset {
 	display:inline-block;
